# VBRCpy

./: .gitignore  CITATION.cff  LICENSE  PROJECT_STATE.md  README.md  compare_sweeps.py  config_example_bayesian_fitting.yaml  config_example_regenerate_sweep.yaml  pyproject.toml
bayesian_fitting_py/: README.md  __init__.py  __main__.py  data_processing.py  fetch_data.py  fitting.py  io.py  orchestration.py  parallel.py  plotting.py  postprocessing.py  prior.py  probability.py  requirements.txt  run_bayes.py
bayesian_fitting_py/vbr/: PREM_for_VBRc.txt  STW105_for_VBRc.txt  __init__.py  cammarano.py  core.py  generate_sweep.py  params.py  plot_lut.py  thermal.py
data/: PREM_for_VBRc.csv
data/reference_models/: PREM_for_VBRc.txt  PREMnoCrust_for_VBRc.txt  STW105_for_VBRc.txt  STW105noCrust_for_VBRc.txt
tests/: conftest.py  generate_references.py  test_data_loading.py  test_fitting.py  test_parallel.py  test_prior.py  test_probability.py  test_sweep.py  test_thermal.py  test_vbr_anelastic.py  test_vbr_elastic.py  test_vbr_viscous.py
tests/fixtures/: tiny_obs.csv
tests/golden/: fitting_ml_estimates.npz  fitting_q_only.npz  fitting_vs_only.npz  fitting_vs_q.npz  sweep_meanEta.npz  sweep_meanQ.npz  sweep_meanVs.npz  thermal_depression_co2.npz  thermal_depression_h2o.npz  thermal_hirschmann.npz  thermal_katz.npz  thermal_yk2001.npz  vbr_anelastic_andrade.npz  vbr_anelastic_eburgers_fastburger.npz  vbr_anelastic_eburgers_pointwise.npz  vbr_anelastic_xfit_mxw.npz  vbr_anelastic_xfit_premelt.npz  vbr_elastic_anharmonic.npz  vbr_elastic_cammarano_lower_mantle.npz  vbr_elastic_cammarano_olivine.npz  vbr_elastic_cammarano_wadsleyite.npz  vbr_viscous_HK2003.npz  vbr_viscous_xfit_premelt.npz
validation/: MAP_vs_Mean_explanation.md  __init__.py  run_all.py  validate_prem.py  validate_roundtrip.py
validation/benchmarkTest_vsMatlab/: __main__.py  config.yaml  inversion_config.yaml  run_benchmark.py  sweep_config.yaml
validation/syntheticTest_adiabat/: inversion_config.yaml  run_example.py  sweep_config.yaml
validation/syntheticTest_geotherm/: README.md  SC2006_geotherm.csv  __main__.py  config.yaml  inversion_config.yaml  run_example.py  sweep_config.yaml
validation/validationCase_PREM/: __main__.py  config.yaml  run_prem.py
validation/validationCase_STW105/: __main__.py  config.yaml  run_stw105.py
vbrcpy/: README.md  __main__.py  fetch_data.py  fitting.py  io.py  orchestration.py  postprocessing.py  run_bayes.py
vbrcpy/vbr/: __init__.py  cammarano.py  generate_sweep.py  params.py  plot_lut.py  thermal.py
