[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian_fitting_py"
version = "1.0.0"
description = "Bayesian inversion of seismic Vs and Q using the VBR calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pyyaml>=5.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "netCDF4>=1.5.0",
    "pygmt>=0.9.0",
]

[project.scripts]
fetch-vbr-data = "bayesian_fitting_py.fetch_data:_cli_main"

[tool.setuptools.packages.find]
include = ["bayesian_fitting_py*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.txt", "*.md", "*.csv"]
